--- a/catkin_ws/src/gui/frontend/src/app/components/navbar/navbar.component.html
+++ b/catkin_ws/src/gui/frontend/src/app/components/navbar/navbar.component.html
@@ -1,18 +1,28 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="nav">
-  <div class="container">
-    <div></div>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <i class="fa fa-bars"></i>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <div class="container" id="dropdown-wrapper">
-        <ul class="navbar-nav nav-fill">
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/']">Home</a>
-          </li>
-        </ul>
-      </div>
-    </div>
+<nav class="px-4 mb-4 navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">
+    <img src="/assets/brandmark.png" height="30" width="30" class="mr-3 d-inline-block align-top" alt="">
+    AUV Control Station
+  </a>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav nav navbar-right ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Dashboard</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">System</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Misison</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Test Area</a>
+      </li>
+    </ul>
   </div>
 </nav>
