Implement compass gui element (+fixes)

--- a/catkin_ws/src/gui/frontend/src/app/components/navbar/navbar.component.html
+++ b/catkin_ws/src/gui/frontend/src/app/components/navbar/navbar.component.html
@@ -21,7 +21,7 @@
         <a class="nav-link" href="#">Misison</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Test Area</a>
+        <a class="nav-link disabled" [routerLink]="['/test']">Test Area</a>
       </li>
     </ul>
   </div>
