--- a/catkin_ws/src/gui/frontend/src/scss/bootstrap.scss
+++ b/catkin_ws/src/gui/frontend/src/scss/bootstrap.scss
@@ -40,9 +40,6 @@
 @import "carousel";
 @import "utilities";
 @import "print";
-@import "components/contact";
-@import "components/about";
-@import "components/blog";
-@import "components/home";
+@import "components/compass";
 @import "components/navbar";
 @import "components/global";
