Implement battery gui element

--- a/catkin_ws/src/gui/frontend/src/scss/bootstrap.scss
+++ b/catkin_ws/src/gui/frontend/src/scss/bootstrap.scss
@@ -41,5 +41,6 @@
 @import "utilities";
 @import "print";
 @import "components/compass";
+@import "components/battery";
 @import "components/navbar";
 @import "components/global";
