--- a/catkin_ws/src/gui/frontend/src/scss/bootstrap.scss
+++ b/catkin_ws/src/gui/frontend/src/scss/bootstrap.scss
@@ -42,5 +42,6 @@
 @import "print";
 @import "components/compass";
 @import "components/battery";
+@import "components/depth";
 @import "components/navbar";
 @import "components/global";
