--- a/catkin_ws/src/gui/frontend/src/scss/_variables.scss
+++ b/catkin_ws/src/gui/frontend/src/scss/_variables.scss
@@ -48,7 +48,7 @@ $yellow:  #ffc107 !default;
 $green:   #28a745 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
-$gblue:   #A9B7C0 !default;
+$gblue:   #6699CC !default;
 $minty:   #C7D8C6 !default;
 $peach:   #EFD9C1 !default;
 $steel:   #EDEDED !default;
