Major ROS integration; Functional gui

--- a/catkin_ws/src/gui/frontend/src/app/components/battery/battery.component.html
+++ b/catkin_ws/src/gui/frontend/src/app/components/battery/battery.component.html
@@ -1,5 +1,8 @@
 <section id="battery-wrapper" class="container border border-default rounded my-2 p-4 justify-content-center">
-  <div class="battery mx-auto mb-2"></div>
+  <div class="battery mx-auto mb-2">
+    <div class="nubbin"></div>
+    <div #batLevel class="batLevel"></div>
+  </div>
   <div class="battery-text p-0 m-0">
     <p class="m-0 p-0">{{voltage}} V</p>
     <p class="battery-note text-muted m-0 p-0">Batteries shouldn't be used under 13 V.</p>
