--- a/catkin_ws/src/gui/frontend/src/app/components/compass/compass.component.html
+++ b/catkin_ws/src/gui/frontend/src/app/components/compass/compass.component.html
@@ -20,10 +20,13 @@
     </div>
   </div>
   <div id="legend" class="card mt-4 justify-content-center">
+    <div id="legend-header" class="card-header">
+      <p>Compass</p>
+    </div>
     <div id="legend-body" class="card-body">
-      <p><b>Heading:</b> {{heading}} rad | {{heading_deg}}&deg;</p>
-      <p><b>Setpoint:</b> {{setpoint}} rad | {{setpoint_deg}}&deg;</p>
-      <p><b>Pinger:</b> {{pinger}} rad | {{pinger_deg}}&deg;</p>
+      <p><b>Heading:</b> {{heading}} rad | {{headingDeg}}&deg;</p>
+      <p><b>Setpoint:</b> {{setpoint}} rad | {{setpointDeg}}&deg;</p>
+      <p><b>Pinger:</b> {{pinger}} rad | {{pingerDeg}}&deg;</p>
     </div>
   </div>
 </section>
