--- a/catkin_ws/src/gui/frontend/src/app/components/depth/depth.component.html
+++ b/catkin_ws/src/gui/frontend/src/app/components/depth/depth.component.html
@@ -24,6 +24,9 @@
     <div #depthLevel id="depth-level" class="level"></div>
   </div>
   <div id="depth-data" class="card mt-4 justify-content-center">
+    <div id="depth-data-header" class="card-header">
+      <p>Depth</p>
+    </div>
     <div id="depth-data-body" class="card-body">
       <p><b>Depth:</b> {{depth}}m</p>
       <p><b>Setpoint:</b> {{setpoint}}m</p>
