--- a/catkin_ws/src/gui/frontend/src/app/components/navbar/navbar.component.html
+++ b/catkin_ws/src/gui/frontend/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <!-- Navbar -->
 <nav class="px-4 mb-4 navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
-    <img src="/assets/brandmark.png" height="30" width="30" class="mr-3 d-inline-block align-top" alt="">
-    AUV Control Station
+    <img src="/assets/brandmark.png" height="32" width="32" class="mr-3 d-inline-block align-top" alt="">
+    AUV Dockside Companion
   </a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
