--- a/catkin_ws/src/gui/frontend/src/scss/components/_depth.scss
+++ b/catkin_ws/src/gui/frontend/src/scss/components/_depth.scss
@@ -18,6 +18,14 @@
   box-shadow: 0px 3px 5px $gray-400;
 }
 
+#depth-data-header p {
+	padding: 0.25vh 0;
+  margin: 0;
+  line-height: 1em;
+	text-align: center;
+  font-size: 1em;
+}
+
 #depth-data-body p {
   padding: 0.25vh 0;
   margin: 0;
