--- a/catkin_ws/src/gui/frontend/src/bootstrap.css
+++ b/catkin_ws/src/gui/frontend/src/bootstrap.css
@@ -6324,7 +6324,7 @@ a.text-dark:hover, a.text-dark:focus {
   height: 40vh;
   border-radius: 100%;
   margin: 0 auto;
-  background: #f8f9fa;
+  background: transparent;
   position: relative;
   box-shadow: 0 0 1px 8px #ced4da; }
 
@@ -6342,6 +6342,13 @@ a.text-dark:hover, a.text-dark:focus {
   width: 40vh;
   margin: 0 auto;
   box-shadow: 0px 3px 5px #ced4da; }
+
+#legend-header p {
+  padding: 0.25vh 0;
+  margin: 0;
+  line-height: 1em;
+  text-align: center;
+  font-size: 1em; }
 
 #legend-body p {
   padding: 0.25vh 0;
@@ -6493,23 +6500,22 @@ a.text-dark:hover, a.text-dark:focus {
   width: 18vh;
   height: 6vh;
   border: 1vh solid #ced4da; }
-  .battery:before {
-    content: '';
-    display: block;
-    height: 4vh;
-    width: 1vh;
-    margin: auto 17vh;
-    background: #ced4da; }
-  .battery:after {
-    position: absolute;
-    top: 0;
-    content: '';
-    display: block;
-    border: 1.75vh solid #dc3545;
-    height: 0;
-    margin: 0.4vh;
-    animation: 6s ease-in-out charging infinite;
-    animation-direction: alternate; }
+
+.nubbin {
+  display: block;
+  height: 4vh;
+  width: 1vh;
+  margin: auto 17vh;
+  background: #ced4da; }
+
+.batLevel {
+  position: absolute;
+  top: 0;
+  display: block;
+  border: 1.75vh solid #dc3545;
+  width: 0;
+  height: 0;
+  margin: 0.4vh; }
 
 .battery-text {
   font-size: 1em;
@@ -6517,208 +6523,6 @@ a.text-dark:hover, a.text-dark:focus {
 
 .battery-note {
   font-size: 0.6em; }
-
-@keyframes charging {
-  1% {
-    width: 0.155vh; }
-  2% {
-    width: 0.31vh; }
-  3% {
-    width: 0.465vh; }
-  4% {
-    width: 0.62vh; }
-  5% {
-    width: 0.775vh; }
-  6% {
-    width: 0.93vh; }
-  7% {
-    width: 1.085vh; }
-  8% {
-    width: 1.24vh; }
-  9% {
-    width: 1.395vh; }
-  10% {
-    width: 1.55vh; }
-  11% {
-    width: 1.705vh; }
-  12% {
-    width: 1.86vh; }
-  13% {
-    width: 2.015vh; }
-  14% {
-    width: 2.17vh; }
-  15% {
-    width: 2.325vh; }
-  16% {
-    width: 2.48vh; }
-  17% {
-    width: 2.635vh; }
-  18% {
-    width: 2.79vh; }
-  19% {
-    width: 2.945vh; }
-  20% {
-    width: 3.1vh; }
-  21% {
-    width: 3.255vh; }
-  22% {
-    width: 3.41vh; }
-  23% {
-    width: 3.565vh; }
-  24% {
-    width: 3.72vh; }
-  25% {
-    width: 3.875vh; }
-  26% {
-    width: 4.03vh; }
-  27% {
-    width: 4.185vh; }
-  28% {
-    width: 4.34vh; }
-  29% {
-    width: 4.495vh; }
-  30% {
-    width: 4.65vh; }
-  31% {
-    width: 4.805vh; }
-  32% {
-    width: 4.96vh; }
-  33% {
-    width: 5.115vh; }
-  34% {
-    width: 5.27vh; }
-  35% {
-    width: 5.425vh; }
-  36% {
-    width: 5.58vh; }
-  37% {
-    width: 5.735vh; }
-  38% {
-    width: 5.89vh; }
-  39% {
-    width: 6.045vh; }
-  40% {
-    width: 6.2vh; }
-  41% {
-    width: 6.355vh; }
-  42% {
-    width: 6.51vh; }
-  43% {
-    width: 6.665vh; }
-  44% {
-    width: 6.82vh; }
-  45% {
-    width: 6.975vh; }
-  46% {
-    width: 7.13vh; }
-  47% {
-    width: 7.285vh; }
-  48% {
-    width: 7.44vh; }
-  49% {
-    width: 7.595vh; }
-  50% {
-    width: 7.75vh; }
-  51% {
-    width: 7.905vh; }
-  52% {
-    width: 8.06vh; }
-  53% {
-    width: 8.215vh; }
-  54% {
-    width: 8.37vh; }
-  55% {
-    width: 8.525vh; }
-  56% {
-    width: 8.68vh; }
-  57% {
-    width: 8.835vh; }
-  58% {
-    width: 8.99vh; }
-  59% {
-    width: 9.145vh; }
-  60% {
-    width: 9.3vh; }
-  61% {
-    width: 9.455vh; }
-  62% {
-    width: 9.61vh; }
-  63% {
-    width: 9.765vh; }
-  64% {
-    width: 9.92vh; }
-  65% {
-    width: 10.075vh; }
-  66% {
-    width: 10.23vh; }
-  67% {
-    width: 10.385vh; }
-  68% {
-    width: 10.54vh; }
-  69% {
-    width: 10.695vh; }
-  70% {
-    width: 10.85vh; }
-  71% {
-    width: 11.005vh; }
-  72% {
-    width: 11.16vh; }
-  73% {
-    width: 11.315vh; }
-  74% {
-    width: 11.47vh; }
-  75% {
-    width: 11.625vh; }
-  76% {
-    width: 11.78vh; }
-  77% {
-    width: 11.935vh; }
-  78% {
-    width: 12.09vh; }
-  79% {
-    width: 12.245vh; }
-  80% {
-    width: 12.4vh; }
-  81% {
-    width: 12.555vh; }
-  82% {
-    width: 12.71vh; }
-  83% {
-    width: 12.865vh; }
-  84% {
-    width: 13.02vh; }
-  85% {
-    width: 13.175vh; }
-  86% {
-    width: 13.33vh; }
-  87% {
-    width: 13.485vh; }
-  88% {
-    width: 13.64vh; }
-  89% {
-    width: 13.795vh; }
-  90% {
-    width: 13.95vh; }
-  91% {
-    width: 14.105vh; }
-  92% {
-    width: 14.26vh; }
-  93% {
-    width: 14.415vh; }
-  94% {
-    width: 14.57vh; }
-  95% {
-    width: 14.725vh; }
-  96% {
-    width: 14.88vh; }
-  97% {
-    width: 15.035vh; }
-  98% {
-    width: 15.19vh; }
-  99% {
-    width: 15.345vh; }
-  100% {
-    width: 15.5vh; } }
 
 .depth-wrapper {
   width: 20vh;
@@ -6736,6 +6540,13 @@ a.text-dark:hover, a.text-dark:focus {
   width: 20vh;
   margin: 0 auto;
   box-shadow: 0px 3px 5px #ced4da; }
+
+#depth-data-header p {
+  padding: 0.25vh 0;
+  margin: 0;
+  line-height: 1em;
+  text-align: center;
+  font-size: 1em; }
 
 #depth-data-body p {
   padding: 0.25vh 0;
