--- a/catkin_ws/src/gui/frontend/src/scss/components/_compass.scss
+++ b/catkin_ws/src/gui/frontend/src/scss/components/_compass.scss
@@ -7,7 +7,7 @@ $mark-w: 4vh;
 	height: $outer-d;
   border-radius: 100%;
   margin: 0 auto;
-  background: $gray-100;
+  background: transparent;
   position: relative;
   box-shadow: 0 0 1px 8px $gray-400;
 }
@@ -27,6 +27,14 @@ $mark-w: 4vh;
   width: 40vh;
   margin: 0 auto;
   box-shadow: 0px 3px 5px $gray-400;
+}
+
+#legend-header p {
+	padding: 0.25vh 0;
+  margin: 0;
+  line-height: 1em;
+	text-align: center;
+  font-size: 1em;
 }
 
 #legend-body p {
