Implement connection gui element

--- a/catkin_ws/src/gui/frontend/src/app/components/test/test.component.html
+++ b/catkin_ws/src/gui/frontend/src/app/components/test/test.component.html
@@ -1,3 +1,4 @@
-<app-depth></app-depth>
+<app-connection></app-connection>
 <app-battery></app-battery>
 <app-compass></app-compass>
+<app-depth></app-depth>
