--- a/catkin_ws/src/gui/frontend/src/scss/_variables.scss
+++ b/catkin_ws/src/gui/frontend/src/scss/_variables.scss
@@ -74,13 +74,13 @@ $colors: map-merge(
   $colors
 );
 
-$primary:       $steel !default;
+$primary:       $gray-300 !default;
 $secondary:     $peach !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
-$light:         $gray-200 !default;
+$light:         $gray-300 !default;
 $dark:          $gray-800 !default;
 
 $theme-colors: () !default;
