Layout dash with basic functionality

--- a/catkin_ws/src/gui/frontend/src/app/components/battery/battery.component.html
+++ b/catkin_ws/src/gui/frontend/src/app/components/battery/battery.component.html
@@ -1,4 +1,4 @@
-<section id="battery-wrapper" class="container border border-default rounded my-2 p-4 justify-content-center">
+<section id="battery-wrapper" class="tool-wrapper container border border-default rounded my-2 p-4 justify-content-center">
   <div class="battery mx-auto mb-2">
     <div class="nubbin"></div>
     <div #batLevel class="batLevel"></div>
