--- a/catkin_ws/src/gui/frontend/src/app/components/compass/compass.component.html
+++ b/catkin_ws/src/gui/frontend/src/app/components/compass/compass.component.html
@@ -1,5 +1,5 @@
-<section id="compass-wrapper" class="container border border-default rounded my-2 p-4">
-  <div #compass id="compass" class="container p-0">
+<section id="compass-wrapper" class="tool-wrapper container border border-default rounded my-2 p-4 justify-content-center">
+  <div #compass id="compass" class="container my-4 p-0">
     <div id="deg0" class="radial-mark"><p>0</p></div>
     <div id="deg45" class="radial-mark"><p>45&deg;</p></div>
     <div id="deg90" class="radial-mark"><p>90&deg;</p></div>
