--- a/catkin_ws/src/gui/frontend/src/app/components/depth/depth.component.html
+++ b/catkin_ws/src/gui/frontend/src/app/components/depth/depth.component.html
@@ -1,5 +1,5 @@
-<section id="depth-wrapper" class="container border border-default rounded my-2 p-4 justify-content-center">
-  <div class="depth-gauge mx-auto mb-2">
+<section id="depth-wrapper" class="tool-wrapper container border border-default rounded my-2 p-4 justify-content-center">
+  <div class="depth-gauge mx-auto my-4">
     <div>
       <div id="tick1" class="tick-mark"></div>
       <div id="tick1-label" class="tick-label"><p>{{tick1}}m</p></div>
