--- a/catkin_ws/src/gui/frontend/src/app/components/mission/mission.component.html
+++ b/catkin_ws/src/gui/frontend/src/app/components/mission/mission.component.html
@@ -1,3 +1,3 @@
 <div class="container w-100 justify-content-center">
-  <h2>Reserved for testing components</h2> 
+  <h2>Mission Page: WIP</h2>
 </div>
