--- a/catkin_ws/src/gui/frontend/src/app/components/navbar/navbar.component.html
+++ b/catkin_ws/src/gui/frontend/src/app/components/navbar/navbar.component.html
@@ -12,13 +12,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav nav navbar-right ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Dashboard</a>
+        <a class="nav-link" [routerLink]="['/']">Dashboard</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">System</a>
+        <a class="nav-link" [routerLink]="['/mission']">Misison</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Misison</a>
+        <a class="nav-link" [routerLink]="['/vision']">Vision</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" [routerLink]="['/test']">Test Area</a>
