--- a/catkin_ws/src/gui/frontend/src/bootstrap.css
+++ b/catkin_ws/src/gui/frontend/src/bootstrap.css
@@ -4,7 +4,6 @@
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-@import url("https://fonts.googleapis.com/css?family=Allura");
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -6695,34 +6694,13 @@ a.text-dark:hover, a.text-dark:focus {
     outline: none;
     border-bottom: 0.25rem solid #64a19d; } }
 
+.tool-wrapper {
+  box-shadow: 0px 3px 5px #ced4da; }
+
 #fader {
   z-index: 1;
   min-height: 120px;
   background-image: linear-gradient(#dee2e6, #dee2e6, transparent); }
-
-.cursive {
-  font-family: Allura, cursive; }
-
-.solidbg {
-  position: relative;
-  width: 100%;
-  min-height: 100vh;
-  padding: 8rem 0;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-color: #dee2e6; }
-
-.solidbg h1 {
-  color: white;
-  font-size: 4rem;
-  line-height: 2.5rem;
-  -webkit-background-clip: text; }
-
-.pborder {
-  border: 4px solid #EFD9C1; }
 
 @media (min-width: 768px) {
   #fader {
