--- a/catkin_ws/src/gui/frontend/src/scss/components/_global.scss
+++ b/catkin_ws/src/gui/frontend/src/scss/components/_global.scss
@@ -1,37 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Allura');
+.tool-wrapper {
+  box-shadow: 0px 3px 5px $gray-400;
+}
 
 #fader {
   z-index: 1;
   min-height: 120px;
   background-image: linear-gradient($primary, $primary, transparent);
-}
-
-.cursive {
-  font-family: Allura, cursive;
-}
-
-.solidbg {
-  position: relative;
-  width: 100%;
-  min-height: 100vh;
-  padding: 8rem 0;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-color: $primary;
-}
-
-.solidbg h1 {
-  color: white;
-  font-size: 4rem;
-  line-height: 2.5rem;
-  -webkit-background-clip: text;
-}
-
-.pborder {
-  border: 4px solid $secondary;
 }
 
 @media (min-width: 768px) {
